# Hexagon

./: .gitignore  README.md
Hexagon/: CMakeLists.txt  File_Comparer.cpp  File_Comparer.h  File_Writer.cpp  File_Writer.h  Hexagon.cpp  Hexagon.h  Hexagon.pro  Hexagon_Error_Codes.h  Hexagon_Interface.h  Parser.cpp  Parser.h  Patch_Buffer.cpp  Patch_Buffer.h  Patch_Comparer.cpp  Patch_Comparer.h  Patch_Reader.cpp  Patch_Reader.h  Patch_Strings.h  Patch_Writer.cpp  Patch_Writer.h  Qt_Code_Reader.cpp  Qt_Code_Reader.h  Qt_Code_Strings.h  Qt_Code_Writer.cpp  Qt_Code_Writer.h  Value_Manipulator.cpp  Value_Manipulator.h
Hexagon_GUI/: CMakeLists.txt  Common_Strings.h  Conflicts_Window.cpp  Conflicts_Window.h  Conflicts_Window.ui  Error_Messages.cpp  Error_Messages.h  File_Dialog_Manager.cpp  File_Dialog_Manager.h  File_Types.h  Hexagon_GUI.pro  Hexagon_GUI.rc  Main_Window.cpp  Main_Window.h  Main_Window.ui  Main_Window_W.h  Settings.h  Settings_File.cpp  Settings_File.h  String_Manipulator.cpp  String_Manipulator.h  Version.h  main.cpp
Hexagon_GUI/Build_Scripts/Unix/: Deploy_New_Version.sh  Prepare_Runtime.sh
Hexagon_GUI/Build_Scripts/Windows/: Prepare_Runtime.bat
Hexagon_GUI/Build_Scripts/Windows/Installer/: Hexagon.nsi  How to Compile the Installer.txt  UPDATES AND SOURCE CODE.TXT
Installer/: Hexagon.nsi  How to Compile the Installer.txt
Test_Cases/: Data_Generator.cpp  Data_Generator.h  Test_Cases.cpp  Test_Cases.h  Test_Cases.pro  main.cpp
